# shen_ai_integration

./: .gitignore  CONTINUATION.md  README.md
docs/superpowers/plans/: 2026-05-31-shenai-x2-mvp.md
docs/superpowers/specs/: 2026-05-31-shenai-x2-integration-design.md
shenai_health_scan/: package.xml  setup.cfg  setup.py
shenai_health_scan/config/: params.yaml
shenai_health_scan/launch/: shenai_health_scan.launch.py
shenai_health_scan/shenai_health_scan/: demo.py  generate_videos.py  loop.py  node.py  runner.py
shenai_health_scan/shenai_health_scan/camera/: base.py  fake_camera.py  ros_camera.py
shenai_health_scan/shenai_health_scan/core/: config.py  orchestrator.py  types.py
shenai_health_scan/shenai_health_scan/engine/: base.py  debug.py  mock_engine.py  shenai_engine.py
shenai_health_scan/shenai_health_scan/publisher/: results_publisher.py
shenai_health_scan/shenai_health_scan/robot_io/: base.py  cards.py  console_io.py  ros_io.py  video_presenter.py  videos.py
shenai_health_scan/shenai_health_scan/triggers/: base.py  manual_trigger.py  service_trigger.py  topic_trigger.py  touch_trigger.py
shenai_health_scan/tests/: test_cards.py  test_config.py  test_debug_engine.py  test_generate_videos.py  test_loop.py  test_mock_engine.py  test_orchestrator.py  test_results_publisher.py  test_runner_demo.py  test_shenai_engine.py  test_types.py  test_video_presenter.py  test_videos.py
