<?xml version="1.0"?>
<package format="3">
  <name>shenai_health_scan</name>
  <version>0.1.0</version>
  <description>Shen.AI facial health scan on AgiBot X2</description>
  <maintainer email="liangkaifeng1987@gmail.com">Liang Kai Feng</maintainer>
  <license>Proprietary</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>aimdk_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
